# stream_alerts

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-bake.hcl  metadatafile.json  tailwind.config.js
.github/workflows/: bake.yml
html/: index.html
public/static/: alert-style.css
src/: alerts.rs  app.rs  auth.rs  error_template.rs  fileserv.rs  ip.rs  lib.rs  main.rs  opts.rs  twitch.rs  util.rs
src/app/: list.rs  login.rs  new.rs  update.rs
static/: style.css
style/: main.scss
templates/: 404.html  alert.html  is_live.html  new_alert.html  update_alert.html
