[package]
name = "alerts_sessis_live"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "env"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenv = "0.15.0"
eyre = { version = "0.6" }
once_cell = "1.9.0"
tokio = { version = "1.15", features = ["rt-multi-thread", "macros", "parking_lot"] }
tracing = "0.1.29"
tracing-error = "0.2.0"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
axum = { version = "0.4.5", features = ["tower-log", "http2", "ws"] }
futures = { version = "0.3" }
askama = {version = "0.11", features = ["with-axum"] }
askama_axum = {version = "0.1"}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tower-http = {version = "0.2.1", features = ["fs", "trace", "catch-panic"]}
tower = "0.4"
tokio-tungstenite = "0.16.1"
hyper = "0.14"
retainer = "0.2"
nanoid = "0.4.0"
aliri_braid = "*"

[build-dependencies]
built = { version = "0.5.1", features = ["chrono", "git2"] }


[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
tower-http = {git = "https://github.com/tower-rs/tower-http.git", rev = "f26edbb"}