[package]
name = "alerts_sessis_live"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive", "env"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenv = "0.15.0"
eyre = { version = "0.6" }
once_cell = "1.17.1"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "parking_lot"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum = { version = "0.6.18", features = ["tower-log", "http2", "ws"] }
futures = { version = "0.3" }
askama = {version = "0.12", features = ["with-axum"] }
askama_axum = {version = "0.3"}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tower-http = {version = "0.4.0", features = ["fs", "trace", "catch-panic"]}
tower = "0.4"
tokio-tungstenite = "0.18.0"
hyper = "0.14"
retainer = "0.3"
nanoid = "0.4.0"
aliri_braid = "0.3.1"
jfs = "0.9.0"
forwarded-header-value = "0.1.1"
rand = "0.8.5"
comrak = { version = "0.18.0", default-features = false }

[build-dependencies]
built = { version = "0.6.0", features = ["chrono", "git2"] }


[profile.dev.package.backtrace]
opt-level = 3
